Added the link to the clone to which has been deployed

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,8 @@
 {
   "projects": {
-    "default": "twitter-clone-1faac"
-  }
+    "default": "twitter-clone-f34dd",
+    "twitter-clone": "twitter-clone-f34dd"
+  },
+  "targets": {},
+  "etags": {}
 }
